--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "tailwind.config.js",
   "scripts": {
-    "build-css": "tailwindcss -i ./src/tailwind.css -o ./assets/css/tailwind.css -w"
+    "dev": "tailwindcss -i ./src/tailwind.css -o ./assets/css/tailwind.css -w"
   },
   "repository": {
     "type": "git",
